# plover-TCIM

./: Changelog.md  README.md  TCIM_R.py  Theory Introduction.md  autosync.sh  setup.cfg
Dev file/Pinyin dict/: Pn 碼表.ods  Zh-Pn.xlsx  number.csv  number.xlsx  聲符簡碼.xlsx
Pinyin Version/: TCIM_P.py  TCIM_R.py  setup.cfg  yaweiP.py  yaweiZ.py
Pinyin Version/Dict_concised/: concised 拼音碼表.xlsx  尋找 工作表4 的重複值.xlsx
Pinyin Version/dictionaries/: Combined_index.json  Combined_main.json  briefs.json  combined_main.json  dict_concised_index.json  numbers.json
Pinyin Version/plover_TCIM_R.egg-info/: PKG-INFO  SOURCES.txt
Pinyin Version/plover_newIMP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Sucheng Version/: ms_quick.dict.csv  ms_quick.dict.ods  速成字彙重根表.ods
Under Development/Zhuyin Version/: Theory Introduction_zhuyin.md
Zhuyin Version/: .~lock.字典_注音Dict_1.0_tab.csv#  TCIM_Zhuyin.py  setup.cfg
Zhuyin Version/Developing files/: 字典_注音Dict_1.0_tab.ods  編碼表—新.ods
Zhuyin Version/dictionaries/: Dict.md  README.md  fingerspelling.json  punctuation.json  symbols.json
Zhuyin Version/plover_TCIM_Zhuyin.egg-info/: PKG-INFO  top_level.txt
dictionaries/: Combined_conflict_split-indexed.json  README.md  commands.json  number_new.json  symbols.json
dictionaries/Not Combined/: Mcbopomofo_conflict.json  Mcbopomofo_index.json  dict_concised_conflict.json  dict_consiced_main.json
dictionaries/abandoned files/: Combined_conflict.json  number.json  test.json
plover_TCIM_R.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
(+44 files in other folders)
