[metadata]
name = plover-TCIM-R
version=pre-0.1.1
description = an Traditional Chinese Input Method
long_description = file: README.md
long_description_content_type = text/markdown
author = Quisette
author_email = quisette.47@gmail.com
url = https://github.com/Quisette/plover-TCIM/
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
py_modules =
	TCIM_R

[options.entry_points]
plover.system =
  Chinese Traditional = TCIM_R
